--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Vcs-Git: https://salsa.debian.org/lxqt-team/lxqt-build-tools.git
 Homepage: https://github.com/lxqt/lxqt-build-tools
 Rules-Requires-Root: no
 
-Package: lxqt-build-tools
+Package: lxqt-build-tools-qt5
 Architecture: all
 Depends: ${misc:Depends},
          binutils,
